--- a/docker-compose.school.yml
+++ b/docker-compose.school.yml
@@ -4,10 +4,8 @@ services:
     image: appointmentguru/infrastructure:latest
     volumes:
       - ~/.ssh:/root/.ssh # map ssh keys
-      - ./play.yml:/code/ansible/deploy.drf.yml
       - ./production.vars.yml:/code/ansible/group_vars/server_swarm.yml
-      - ./template.yml:/etc/ansible/roles/djangoapp/templates/docker-compose.yml
-    command: ansible-playbook /code/ansible/deploy.drf.yml  -i /etc/ansible/inventory/digital_ocean.py -e "organization=appointmentguru service=communicationguru entity_name=communication" --tags=deploy
+    command: ansible-playbook /code/ansible/deploy.drf.yml -i /etc/ansible/inventory/digital_ocean.py -e "organization=appointmentguru service=communicationguru entity_name=communication"
     environment:
       - ANSIBLE_HOST_KEY_CHECKING=False
       - ANSIBLE_LIBRARY=/etc/ansible/library
