--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -11,3 +11,5 @@ services:
       - .:/code
     environment:
       - CODACY_PROJECT_TOKEN=6fd78b4fd485487db968f615fc21b8c2
+    env_file:
+      - dev.env
