use env.test for tests. Twillio test is integration test

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -12,4 +12,4 @@ services:
     environment:
       - CODACY_PROJECT_TOKEN=6fd78b4fd485487db968f615fc21b8c2
     env_file:
-      - dev.env
+      - test.env
