--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ psycopg2==2.6.2
 twilio==5.6.0
 slackclient==1.0.6
 django-anymail==0.10
-
+kong_oauth==0.1
 django-filter
 django-phonenumber-field
 python-dateutil
