--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-django==1.10
-djangorestframework==3.6
+Django==1.11
+django-filter==1.0.4
+djangorestframework==3.6.3
 django-celery==3.1.17
 celery==3.1.23
 gunicorn==19.6.0
@@ -7,16 +8,16 @@ psycopg2==2.6.2
 twilio==5.6.0
 slackclient==1.0.6
 django-anymail==0.10
+django-storages==1.6.3
+boto==2.48.0
 kong_oauth==0.1
-django-filter
 django-phonenumber-field
 python-dateutil
 
 ipython
 ipdb
-Faker
 responses
 
 coverage
 codacy-coverage
-
+Faker
