--- a/docker-compose.school.yml
+++ b/docker-compose.school.yml
@@ -5,7 +5,7 @@ services:
     volumes:
       - ~/.ssh:/root/.ssh # map ssh keys
       - ./production.vars.yml:/code/ansible/group_vars/server_swarm.yml
-    command: ansible-playbook /code/ansible/deploy.drf.yml -i /etc/ansible/inventory/digital_ocean.py -e "organization=appointmentguru service=communicationguru entity_name=communication"
+    command: ansible-playbook /code/ansible/deploy.drf.yml -i /etc/ansible/inventory/digital_ocean.py -e "organization=appointmentguru service=communicationguru entity_name=communication" --skip-tags=kong
     environment:
       - ANSIBLE_HOST_KEY_CHECKING=False
       - ANSIBLE_LIBRARY=/etc/ansible/library
