--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 Django==1.11.3
 django-filter==1.0.4
 djangorestframework==3.6.3
-django-celery==3.1.17
-celery==3.1.23
+django-celery
+celery==4.1.0
+django-celery-results
 gunicorn==19.6.0
 psycopg2==2.6.2
 twilio==5.6.0
