--- a/docker-compose.school.yml
+++ b/docker-compose.school.yml
@@ -4,7 +4,8 @@ services:
     image: appointmentguru/infrastructure:latest
     volumes:
       - ~/.ssh:/root/.ssh # map ssh keys
-      - ./production.vars.yml:/code/ansible/group_vars/server_swarm.yml
+      - ./production/environment.yml:/code/ansible/group_vars/server_swarm.yml
+      - ./production/docker-compose.yml:/etc/ansible/roles/djangoapp/templates/docker-compose.yml
     command: ansible-playbook /code/ansible/deploy.drf.yml -i /etc/ansible/inventory/digital_ocean.py -e "organization=appointmentguru service=communicationguru entity_name=communication" --skip-tags=kong
     environment:
       - ANSIBLE_HOST_KEY_CHECKING=False
