remove tests for rabbit upness

--- a/production/docker-compose.yml
+++ b/production/docker-compose.yml
@@ -13,6 +13,7 @@ services:
         update_config:
           parallelism: 1
           delay: 30s
+    environment:
 {% for var in docker_environment %}
       - {{var.key}}={{var.value}}
 {% endfor %}
@@ -26,6 +27,7 @@ services:
         update_config:
           parallelism: 1
           delay: 30s
+    environment:
 {% for var in docker_environment %}
       - {{var.key}}={{var.value}}
 {% endfor %}
