--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ django-filter==1.0.4
 djangorestframework==3.6.3
 django-celery
 celery==4.1.0
+kombu==4.1.0
 django-celery-results
 gunicorn==19.6.0
 psycopg2==2.6.2
