--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ test:
   - export DATABASE_URL=postgres://postgres:@postgres:5432/python-test-app
   - apt-get update -qy
   - apt-get install -y python-dev python-pip
-  - pip install -r requirements.txt && pip install -r requirements-dev.txt
+  - pip install -r requirements.txt
   - coverage run --branch --source=. ./manage.py test
   - coverage html
   - coverage report
